0.04

0.03 2022-10-13T11:19:30+02:00
 - Fix repository typo.

0.02 2022-10-12T00:50:35+02:00
 - Fix test dependencies (missing DateTime).

0.01 2022-10-11T21:13:02+02:00
 - First version.