@@ -22,6 +22,10 @@ has dt_uploaded => (
 	is => 'ro',
 );
 
+has license => {
+	is => 'ro',
+};
+
 sub BUILD {
 	my $self = shift;
 
@@ -62,6 +66,7 @@ Data::Commons::Image - Data object for Wikimedia Commons image.
  my $dt_uploaded = $obj->dt_uploaded;
  my $height = $obj->height;
  my $id = $obj->id;
+ my $license = $obj->license;
  my $size = $obj->size;
  my $url = $obj->url;
  my $url_cb = $obj->url_cb;
@@ -121,6 +126,12 @@ Default value is undef.
 =item * C<id>
 
 Image id.
+It's optional.
+Default value is undef.
+
+=item * C<license>
+
+Image license.
 It's optional.
 Default value is undef.
 
@@ -206,6 +217,14 @@ Get image id.
 
 Returns number.
 
+=head2 C<license>
+
+ my $license = $obj->license;
+
+Get image license.
+
+Returns string.
+
 =head2 C<size>
 
  my $size = $obj->size;
@@ -263,6 +282,7 @@ Returns number.
                  'year' => 2022,
          ),
          'height' => 2730,
+         'license' => 'cc-by-sa-4.0',
          'size' => 1040304,
          'url' => 'https://upload.wikimedia.org/wikipedia/commons/a/a4/Michal_from_Czechia.jpg',
          'width' => 4096,
@@ -276,6 +296,7 @@ Returns number.
  print 'Size: '.$obj->size."\n";
  print 'URL: '.$obj->url."\n";
  print 'Width: '.$obj->width."\n";
+ print 'License: '.$obj->license."\n";
  print 'Date and time the photo was created: '.$obj->dt_created."\n";
  print 'Date and time the photo was uploaded: '.$obj->dt_uploaded."\n";
 
@@ -287,6 +308,7 @@ Returns number.
  # Size: 1040304
  # URL: https://upload.wikimedia.org/wikipedia/commons/a/a4/Michal_from_Czechia.jpg
  # Width: 4096
+ # License: cc-by-sa-4.0
  # Date and time the photo was created: 2022-01-01T00:00:00
  # Date and time the photo was uploaded: 2022-07-14T00:00:00
 
