@@ -28,9 +28,10 @@ t/Data-Commons-Image/06-dt_created.t
 t/Data-Commons-Image/07-dt_uploaded.t
 t/Data-Commons-Image/08-height.t
 t/Data-Commons-Image/09-id.t
-t/Data-Commons-Image/10-size.t
-t/Data-Commons-Image/11-url.t
-t/Data-Commons-Image/12-url_cb.t
-t/Data-Commons-Image/13-width.t
+t/Data-Commons-Image/10-license.t
+t/Data-Commons-Image/11-size.t
+t/Data-Commons-Image/12-url.t
+t/Data-Commons-Image/13-url_cb.t
+t/Data-Commons-Image/14-width.t
 xt/Data-Commons-Image/01-pod_coverage.t
 xt/Data-Commons-Image/02-pod.t
