@@ -21,6 +21,7 @@ my $obj = Data::Commons::Image->new(
                 'year' => 2022,
         ),
         'height' => 2730,
+        'license' => 'cc-by-sa-4.0',
         'size' => 1040304,
         'url' => 'https://upload.wikimedia.org/wikipedia/commons/a/a4/Michal_from_Czechia.jpg',
         'width' => 4096,
@@ -34,6 +35,7 @@ print 'Height: '.$obj->height."\n";
 print 'Size: '.$obj->size."\n";
 print 'URL: '.$obj->url."\n";
 print 'Width: '.$obj->width."\n";
+print 'License: '.$obj->license."\n";
 print 'Date and time the photo was created: '.$obj->dt_created."\n";
 print 'Date and time the photo was uploaded: '.$obj->dt_uploaded."\n";
 
@@ -45,5 +47,6 @@ print 'Date and time the photo was uploaded: '.$obj->dt_uploaded."\n";
 # Size: 1040304
 # URL: https://upload.wikimedia.org/wikipedia/commons/a/a4/Michal_from_Czechia.jpg
 # Width: 4096
+# License: cc-by-sa-4.0
 # Date and time the photo was created: 2022-01-01T00:00:00
 # Date and time the photo was uploaded: 2022-07-14T00:00:00
