@@ -1,4 +1,5 @@
 0.04
+ - Add license parameter.
 
 0.03 2022-10-13T11:19:30+02:00
  - Fix repository typo.
